# quill-router

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .stylelintrc.json  Dockerfile  LICENSE  NOTICE  README.md  aws_ses_followup.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.js  pyproject.toml  tsconfig.json  voice.md
.claude/: launch.json
.github/: dependabot.yml
docs/: founder-interview.md  openrouter-coverage.md  openrouter-seo-audit.md  outreach-approval-packet.md  outreach-quote-bank.csv  revenue-loop-google-sheet.csv  revenue-loop.md  runbook.md  security.md  sign-in-with-trustedrouter.md  social-approval-queue.csv
interviews/: README.md
scripts/: audit_typed_counters.py  build-world-svg.mjs  check_credit_row.py  check_openrouter_coverage.py  check_price_coverage.py  check_price_spike.py  classify_provider_routes.py  cleanup_legacy_credit_json.py  cleanup_smoke_signups.py  credit_grant_bradleat.py  credit_grant_david.py  credit_grant_jay.py  credit_grant_joseph.py  credit_grant_posix4e.py  credit_makeup.py  deploy-gcp.sh  detect_provider_drift.py  entrypoint.sh  find_gabriella.py  fusion_full_eval.py  fusion_live_eval.py  fusion_micro_eval.py  generate_blog_og.py  grant_credit.py  import_tr_benchmarks.py  ingest_openrouter_catalog.py  prod_embeddings_probe.py  provision_creator_pilot.py  publish-trust-gcs.sh  run_synthetic_monitor.py  shard_workspace.py  smoke_all_providers.py  smoke_e2e.py  smoke_openai_sdk.py  stress_credit_shards.py  typed_flip.py  update_provider_throughput_rank.py
tests/: __init__.py  conftest.py  test_acquisition_attribution.py  test_ai_iq.py  test_api_edge_contracts.py  (+153 more)
tests-e2e/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+618 files in other folders)
